# kstd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yaml  conanfile.py  requirements.txt
.github/workflows/: kstd-pipeline.yml
benchmark/: CMakeLists.txt
benchmark/src/: Bench.Allocators.cpp  Bench.UniquePtr.cpp  Utils.hh
conan/: conanfile.py
conan/profiles/: debug
examples/: Async.cpp  CMakeLists.txt  Sandbox.cpp
src/: CMakeLists.txt
src/kstd/: CMakeLists.txt  Concepts.hh  Core.hh  Functional.hh  Log.cpp  Log.hh  Macros.hh  Math.hh  Scope.hh
src/kstd/async/: AsyncContext.cpp  AsyncContext.hh  AsyncMessage.hh  AsyncService.cpp  AsyncService.hh  Core.hh  Utils.cpp  Utils.hh
src/kstd/core/: Core.cpp  Core.hh
src/kstd/memory/: AlignedAllocator.hh  Allocator.hh  Mallocator.hh  PoolAllocator.hh  SharedPtr.hh  UniquePtr.hh
test/: CMakeLists.txt
test/src/: Tests.Functional.cpp  Tests.Memory.Allocators.cpp  Tests.Memory.PoolAllocator.cpp  Tests.Memory.SharedPtr.cpp  Tests.Memory.SmartPtr.cpp  Tests.Memory.UniquePtr.cpp  Tests.Scope.cpp
test/utils/: Core.hh  Utils.hh
